--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,9 +73,10 @@ figure figcaption {
   background: #3a1d4d7e;
   width: 100%; height: 100%;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.2rem; padding-top: 25%;
+  font-size: 1.2rem;
   color: whitesmoke; text-align: center;
   top: 100%; transition: top 1.5s;
+  white-space:pre-line; line-height: 1.3rem;
 }
 p {
   width: 90%;
