--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: Marvel;
-  src: url(../font/MarvelRegular-Dj83.ttf);
-}
+@font-face {font-family: Marvel; src: url(../font/MarvelRegular-Dj83.ttf);}
 *, *::before, *::after {
   -webkit-box-sizing: border-box; box-sizing: border-box;
   margin: 0; padding: 0;
@@ -11,51 +8,27 @@ html {
   height: -webkit-fill-available;
 }
 body {
-  text-transform: uppercase;
-  font-family: Marvel;
+  text-transform: uppercase; font-family: Marvel; overflow: hidden;
   -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased;
   background: url(../img/wallpapertip_space-wallpaper-4k_15901.jpg) no-repeat center/cover;
   color: #000;
 }
-#container {
-  margin: 1%  auto; width: 45vw;
-  color: #fff;
-}
-form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-h1 {
-  font-size: 3rem; text-align: left;
-}
-#home, #quote, #imgUrl, #btn {
-  grid-column: span 2;
-}
-textarea, input {
-  font-family: Marvel; text-transform: uppercase;
-  font-size: 1.3rem;
-}
+#container { margin: 1%  auto; width: 45vw; color: #fff;}
+form {display: grid; grid-template-columns: 1fr 1fr;}
+h1 { font-size: 3rem; text-align: left;}
+#home, #quote, #imgUrl, #btn { grid-column: span 2;}
+textarea, input { font-family: Marvel; text-transform: uppercase; font-size: 1.3rem;}
 #superHero, #superPower {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 #realName, #age {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
-#card {
-  width: 18vw;
-  transition: color 0.35s, border-color 0.35s, box-shadow 0.35s, transform 0.35s;
-}
+#card { width: 18vw;transition: color 0.35s, border-color 0.35s, box-shadow 0.35s, transform 0.35s;}
 #card:hover {
-  box-shadow: 0 1rem 1rem #fff;
-    transform: translateY(-0.25rem);
-    cursor: pointer;
-}
-#card > img {
-  max-width: 100%; max-height: 100%; object-fit: cover;
-}
-.gallery {
-  margin: 1% auto; width: 45%;
-}
+  box-shadow: 0 1rem 1rem #fff; transform: translateY(-0.25rem);}
+#card > img { max-width: 100%; max-height: 100%; object-fit: cover;}
+.gallery {margin: 1% auto; width: 45%;}
 #scrolling-wrapper {
   display: block;
   overflow-x: scroll; overflow-y: hidden;
@@ -64,25 +37,16 @@ textarea, input {
 .scrolling-wrapper > figure {
   box-sizing: border-box; width: 18vw; height: auto; overflow: hidden;
 }
-.card {
-  display: inline-block; position: relative;
-  width: auto; height: 100%;
+.card { display: inline-block; position: relative; width: auto; height: 100%;
 }
 figure figcaption {
-  position: absolute;
-  background: #3a1d4d7e;
-  width: 100%; height: 100%;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.2rem;
-  color: whitesmoke; text-align: center;
-  top: 100%; transition: top 1.5s;
-  white-space:pre-line; line-height: 1.3rem;
+  position: absolute; background: #3a1d4d7e;
+  width: 100%; height: 100%; font-family:'Segoe UI', sans-serif;
+  font-size: 1.2rem; color: whitesmoke; text-align: center;
+  top: 100%; transition: top 1.5s; white-space:pre-line; line-height: 1.3rem;
 }
-p {
-  width: 90%;
-  white-space: nowrap;
+.panther {position: absolute; left: 5%; top: 2%;}
+p {width: 90%; white-space: nowrap;
   overflow: hidden; display: inline-block; text-overflow: ellipsis;
 }
-figure:hover figcaption {
-  top: 0;
-}
+figure:hover figcaption {top: 0;}
